# vtc-vta-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/CLA/: ENTITY.md  INDIVIDUAL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
cnm-cli/: Cargo.toml  README.md
cnm-cli/src/: auth.rs  client.rs  config.rs  main.rs  setup.rs
docs/: VTA_Service_Overview.pptx  bip32_paths.md  design.md
vta-sdk/: Cargo.toml
vta-sdk/src/: contexts.rs  did_secrets.rs  lib.rs
vta-sdk/src/keys/: mod.rs
vta-sdk/src/protocols/key_management/: create.rs  get.rs  mod.rs  rename.rs  revoke.rs
vta-service/: CLAUDE.md  Cargo.toml
vta-service/src/: acl_cli.rs  config.rs  did_key.rs  did_webvh.rs  error.rs  import_did.rs  main.rs  server.rs  setup.rs  status.rs
vta-service/src/acl/: mod.rs
vta-service/src/auth/: credentials.rs  extractor.rs  jwt.rs  mod.rs  session.rs
vta-service/src/contexts/: mod.rs
vta-service/src/keys/: derivation.rs  mod.rs  paths.rs
vta-service/src/keys/seed_store/: aws.rs  config.rs  gcp.rs  keyring.rs  mod.rs
vta-service/src/routes/: acl.rs  auth.rs  config.rs  contexts.rs  health.rs  keys.rs  mod.rs
vta-service/src/store/: mod.rs
