
[workspace]
members = ["cnm-cli", "vta-sdk", "vta-service"]
resolver = "3"

[workspace.package]
description = "Verified Trust Communities - Verified Trust Agent SDK and Services"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.91.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/FirstPersonNetwork/vtc-vta-rs"

[workspace.dependencies]

# Affinidi Trust Development Kit
affinidi-tdk = "0.4"

# Decentralized Trust Graph Credentials
# NOTE: When this is published, switch from git to crates.io
dtg-credentials = { version = "0.1", git = "https://github.com/FirstPersonNetwork/dtg-credentials-rs" }

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "signal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Embedded key-value store
fjall = "3"

# Serialization (JSON)
serde_json = "1"

# Key derivation (BIP32)
ed25519-dalek-bip32 = "0.3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10"

# DID Web with Verifiable History
did-webvh = "0.1"
didwebvh-rs = "0.1"

# URL parsing
url = "2"

# Cryptography
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
multibase = "0.9"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Axum extras (typed headers for Bearer auth)
axum-extra = { version = "0.12", features = ["typed-header"] }

# Base64 encoding
base64 = "0.22"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal UI
ratatui = "0.30"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
