[package]
name = "cnm-cli"
description = "CLI Tool for Verified Trust Agents operating in Verified Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cnm"
path = "src/main.rs"

[dependencies]
vta-sdk = { path = "../vta-sdk" }
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = "0.7"
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
chrono = { workspace = true }
dialoguer = "0.12"
dirs = "6"
ed25519-dalek = "2"
keyring = "3"
multibase = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
